Main page adapting tablets

--- a/prepros.config
+++ b/prepros.config
@@ -81,7 +81,308 @@
       "reuseConnection": true,
       "connectionType": "ftp",
       "exportHistory": true,
-      "history": []
+      "history": [
+        {
+          "file": "favicon.ico",
+          "mtimeMs": 1614316789584,
+          "date": "2024-04-05T09:20:51.929Z"
+        },
+        {
+          "file": "favicon.png",
+          "mtimeMs": 1712154233480.137,
+          "date": "2024-04-05T09:20:52.285Z"
+        },
+        {
+          "file": "favicon.svg",
+          "mtimeMs": 1614316776707.5503,
+          "date": "2024-04-05T09:20:52.716Z"
+        },
+        {
+          "file": "index.html",
+          "mtimeMs": 1712311835496.3647,
+          "date": "2024-04-05T10:13:17.906Z"
+        },
+        {
+          "file": "css/styles.css",
+          "mtimeMs": 1712312630507.275,
+          "date": "2024-04-05T10:24:30.233Z"
+        },
+        {
+          "file": "css/styles.min.css",
+          "mtimeMs": 1712312632138.277,
+          "date": "2024-04-05T10:24:30.616Z"
+        },
+        {
+          "file": "css/styles.min.css.map",
+          "mtimeMs": 1712312632146.276,
+          "date": "2024-04-05T10:24:30.954Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTTRegular.eot",
+          "mtimeMs": 1712220212000,
+          "date": "2024-04-05T09:20:55.280Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTTRegular.svg",
+          "mtimeMs": 1712220212000,
+          "date": "2024-04-05T09:20:55.858Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTTRegular.ttf",
+          "mtimeMs": 1712220212000,
+          "date": "2024-04-05T09:20:56.397Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTTRegular.woff",
+          "mtimeMs": 1712220212000,
+          "date": "2024-04-05T09:20:56.886Z"
+        },
+        {
+          "file": "fonts/FreeSetExtraCTTRegular.woff2",
+          "mtimeMs": 1712220212000,
+          "date": "2024-04-05T09:20:57.352Z"
+        },
+        {
+          "file": "fonts/InterBlack.eot",
+          "mtimeMs": 1712220668000,
+          "date": "2024-04-05T09:20:58.009Z"
+        },
+        {
+          "file": "fonts/InterBlack.otf",
+          "mtimeMs": 1627516836000,
+          "date": "2024-04-05T09:20:58.562Z"
+        },
+        {
+          "file": "fonts/InterBlack.svg",
+          "mtimeMs": 1712220668000,
+          "date": "2024-04-05T09:20:59.287Z"
+        },
+        {
+          "file": "fonts/InterBlack.ttf",
+          "mtimeMs": 1712220668000,
+          "date": "2024-04-05T09:20:59.881Z"
+        },
+        {
+          "file": "fonts/InterBlack.woff",
+          "mtimeMs": 1712220668000,
+          "date": "2024-04-05T09:21:00.380Z"
+        },
+        {
+          "file": "fonts/InterBlack.woff2",
+          "mtimeMs": 1712220670000,
+          "date": "2024-04-05T09:21:00.864Z"
+        },
+        {
+          "file": "fonts/InterBold.eot",
+          "mtimeMs": 1711945486000,
+          "date": "2024-04-05T09:21:01.411Z"
+        },
+        {
+          "file": "fonts/InterBold.svg",
+          "mtimeMs": 1711945486000,
+          "date": "2024-04-05T09:21:02.343Z"
+        },
+        {
+          "file": "fonts/InterBold.ttf",
+          "mtimeMs": 1711945486000,
+          "date": "2024-04-05T09:21:03.040Z"
+        },
+        {
+          "file": "fonts/InterBold.woff",
+          "mtimeMs": 1711945486000,
+          "date": "2024-04-05T09:21:03.575Z"
+        },
+        {
+          "file": "fonts/InterBold.woff2",
+          "mtimeMs": 1711945490000,
+          "date": "2024-04-05T09:21:04.058Z"
+        },
+        {
+          "file": "fonts/InterRegular.eot",
+          "mtimeMs": 1711945512000,
+          "date": "2024-04-05T09:21:04.611Z"
+        },
+        {
+          "file": "fonts/InterRegular.svg",
+          "mtimeMs": 1711945512000,
+          "date": "2024-04-05T09:21:05.368Z"
+        },
+        {
+          "file": "fonts/InterRegular.ttf",
+          "mtimeMs": 1711945512000,
+          "date": "2024-04-05T09:21:05.885Z"
+        },
+        {
+          "file": "fonts/InterRegular.woff",
+          "mtimeMs": 1711945512000,
+          "date": "2024-04-05T09:21:06.461Z"
+        },
+        {
+          "file": "fonts/InterRegular.woff2",
+          "mtimeMs": 1711945516000,
+          "date": "2024-04-05T09:21:07.003Z"
+        },
+        {
+          "file": "fonts/InterSemiBold.eot",
+          "mtimeMs": 1712220696000,
+          "date": "2024-04-05T09:21:07.566Z"
+        },
+        {
+          "file": "fonts/InterSemiBold.otf",
+          "mtimeMs": 1627516836000,
+          "date": "2024-04-05T09:21:08.086Z"
+        },
+        {
+          "file": "fonts/InterSemiBold.svg",
+          "mtimeMs": 1712220694000,
+          "date": "2024-04-05T09:21:09.054Z"
+        },
+        {
+          "file": "fonts/InterSemiBold.ttf",
+          "mtimeMs": 1712220694000,
+          "date": "2024-04-05T09:21:09.629Z"
+        },
+        {
+          "file": "fonts/InterSemiBold.woff",
+          "mtimeMs": 1712220696000,
+          "date": "2024-04-05T09:21:10.158Z"
+        },
+        {
+          "file": "fonts/InterSemiBold.woff2",
+          "mtimeMs": 1712220698000,
+          "date": "2024-04-05T09:21:10.595Z"
+        },
+        {
+          "file": "img/backs/main-mob.png",
+          "mtimeMs": 1712312116495.618,
+          "date": "2024-04-05T10:16:17.108Z"
+        },
+        {
+          "file": "img/backs/main.png",
+          "mtimeMs": 1712312111510.0796,
+          "date": "2024-04-05T10:16:17.671Z"
+        },
+        {
+          "file": "img/icons/main.svg",
+          "mtimeMs": 1712235910348.1204,
+          "date": "2024-04-05T09:21:12.284Z"
+        },
+        {
+          "file": "img/icons/next.svg",
+          "mtimeMs": 1712308333424.045,
+          "date": "2024-04-05T09:21:13.083Z"
+        },
+        {
+          "file": "img/icons/prev.svg",
+          "mtimeMs": 1712229346088.6472,
+          "date": "2024-04-05T09:21:13.456Z"
+        },
+        {
+          "file": "img/images/for-1.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:18.422Z"
+        },
+        {
+          "file": "img/images/for-2.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:18.785Z"
+        },
+        {
+          "file": "img/images/for-3.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:19.162Z"
+        },
+        {
+          "file": "img/images/for-4.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:19.576Z"
+        },
+        {
+          "file": "img/images/for-5.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:19.941Z"
+        },
+        {
+          "file": "img/images/for-6.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:20.295Z"
+        },
+        {
+          "file": "img/images/janna.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:20.745Z"
+        },
+        {
+          "file": "img/images/logo-1.svg",
+          "mtimeMs": 1712229021168.284,
+          "date": "2024-04-05T09:21:17.466Z"
+        },
+        {
+          "file": "img/images/logo-2.svg",
+          "mtimeMs": 1712229371132.812,
+          "date": "2024-04-05T09:21:17.918Z"
+        },
+        {
+          "file": "img/images/video.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:21.608Z"
+        },
+        {
+          "file": "img/images/why-1.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:21.954Z"
+        },
+        {
+          "file": "img/images/why-2.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:22.334Z"
+        },
+        {
+          "file": "img/images/why-3.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:22.700Z"
+        },
+        {
+          "file": "img/images/why-4.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:23.045Z"
+        },
+        {
+          "file": "img/images/why-5.png",
+          "mtimeMs": 1712294150000,
+          "date": "2024-04-05T10:16:23.388Z"
+        },
+        {
+          "file": "js/libs.js",
+          "mtimeMs": 1712239958104.0942,
+          "date": "2024-04-05T09:21:21.056Z"
+        },
+        {
+          "file": "js/libs.min.js",
+          "mtimeMs": 1712239967806.0916,
+          "date": "2024-04-05T09:21:21.489Z"
+        },
+        {
+          "file": "js/libs.min.js.map",
+          "mtimeMs": 1712239967827.097,
+          "date": "2024-04-05T09:21:21.936Z"
+        },
+        {
+          "file": "js/scripts.js",
+          "mtimeMs": 1712311224258.148,
+          "date": "2024-04-05T10:13:19.517Z"
+        },
+        {
+          "file": "js/scripts.min.js",
+          "mtimeMs": 1712311224717.2466,
+          "date": "2024-04-05T10:13:19.848Z"
+        },
+        {
+          "file": "js/scripts.min.js.map",
+          "mtimeMs": 1712311224718.2502,
+          "date": "2024-04-05T10:13:20.202Z"
+        }
+      ]
     },
     "packages": {
       "createPackageLock": true
