Main page is all over done

--- a/prepros.config
+++ b/prepros.config
@@ -3,9 +3,9 @@
   "about": "This is a Prepros (https://prepros.io) configuration file. You can commit this file to a git repo to backup and sync project configurations.",
   "config": {
     "proxy": {
-      "enable": false,
-      "target": "",
-      "useLocalAssets": false
+      "enable": true,
+      "target": "http://newsystempsy.com",
+      "useLocalAssets": true
     },
     "reload": {
       "enable": true,
@@ -98,24 +98,19 @@
           "date": "2024-04-05T09:20:52.716Z"
         },
         {
-          "file": "index.html",
-          "mtimeMs": 1712311835496.3647,
-          "date": "2024-04-05T10:13:17.906Z"
-        },
-        {
           "file": "css/styles.css",
-          "mtimeMs": 1712312630507.275,
-          "date": "2024-04-05T10:24:30.233Z"
+          "mtimeMs": 1712412268785.0803,
+          "date": "2024-04-06T14:12:35.243Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1712312632138.277,
-          "date": "2024-04-05T10:24:30.616Z"
+          "mtimeMs": 1712412270361.2996,
+          "date": "2024-04-06T14:12:36.531Z"
         },
         {
           "file": "css/styles.min.css.map",
-          "mtimeMs": 1712312632146.276,
-          "date": "2024-04-05T10:24:30.954Z"
+          "mtimeMs": 1712412270368.2983,
+          "date": "2024-04-06T14:12:39.073Z"
         },
         {
           "file": "fonts/FreeSetExtraCTTRegular.eot",
@@ -314,8 +309,8 @@
         },
         {
           "file": "img/images/logo-1.svg",
-          "mtimeMs": 1712229021168.284,
-          "date": "2024-04-05T09:21:17.466Z"
+          "mtimeMs": 1712411965697.8425,
+          "date": "2024-04-06T14:00:37.620Z"
         },
         {
           "file": "img/images/logo-2.svg",
@@ -381,6 +376,21 @@
           "file": "js/scripts.min.js.map",
           "mtimeMs": 1712311224718.2502,
           "date": "2024-04-05T10:13:20.202Z"
+        },
+        {
+          "file": "index.php",
+          "mtimeMs": 1712412836774.1296,
+          "date": "2024-04-06T14:14:05.358Z"
+        },
+        {
+          "file": "date/date.php",
+          "mtimeMs": 1712411691657.1873,
+          "date": "2024-04-06T13:55:10.980Z"
+        },
+        {
+          "file": "img/images/logo--22.svg",
+          "mtimeMs": 1712412711588.129,
+          "date": "2024-04-06T14:12:41.383Z"
         }
       ]
     },
@@ -1212,7 +1222,7 @@
       {
         "file": "_app/index.pug",
         "config": {
-          "customOutput": "index.html"
+          "customOutput": "index.php"
         }
       },
       {
