--- a/prepros.config
+++ b/prepros.config
@@ -99,18 +99,18 @@
         },
         {
           "file": "css/styles.css",
-          "mtimeMs": 1712412268785.0803,
-          "date": "2024-04-06T14:12:35.243Z"
+          "mtimeMs": 1712585142475.1755,
+          "date": "2024-04-08T14:05:57.467Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1712412270361.2996,
-          "date": "2024-04-06T14:12:36.531Z"
+          "mtimeMs": 1712585144465.1736,
+          "date": "2024-04-08T14:05:57.819Z"
         },
         {
           "file": "css/styles.min.css.map",
-          "mtimeMs": 1712412270368.2983,
-          "date": "2024-04-06T14:12:39.073Z"
+          "mtimeMs": 1712585144468.178,
+          "date": "2024-04-08T14:05:58.166Z"
         },
         {
           "file": "fonts/FreeSetExtraCTTRegular.eot",
@@ -309,13 +309,13 @@
         },
         {
           "file": "img/images/logo-1.svg",
-          "mtimeMs": 1712411965697.8425,
-          "date": "2024-04-06T14:00:37.620Z"
+          "mtimeMs": 1712556597086.2952,
+          "date": "2024-04-08T06:11:52.415Z"
         },
         {
           "file": "img/images/logo-2.svg",
-          "mtimeMs": 1712229371132.812,
-          "date": "2024-04-05T09:21:17.918Z"
+          "mtimeMs": 1712556767197.4026,
+          "date": "2024-04-08T06:13:02.635Z"
         },
         {
           "file": "img/images/video.png",
@@ -379,8 +379,8 @@
         },
         {
           "file": "index.php",
-          "mtimeMs": 1712412836774.1296,
-          "date": "2024-04-06T14:14:05.358Z"
+          "mtimeMs": 1712585102526.298,
+          "date": "2024-04-08T14:05:57.066Z"
         },
         {
           "file": "date/date.php",
@@ -391,6 +391,11 @@
           "file": "img/images/logo--22.svg",
           "mtimeMs": 1712412711588.129,
           "date": "2024-04-06T14:12:41.383Z"
+        },
+        {
+          "file": "img/images/logo.svg",
+          "mtimeMs": 1712555171975.407,
+          "date": "2024-04-08T06:11:53.006Z"
         }
       ]
     },
