--- a/prepros.config
+++ b/prepros.config
@@ -99,18 +99,18 @@
         },
         {
           "file": "css/styles.css",
-          "mtimeMs": 1712585142475.1755,
-          "date": "2024-04-08T14:05:57.467Z"
+          "mtimeMs": 1713342227763.581,
+          "date": "2024-04-17T08:24:32.306Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1712585144465.1736,
-          "date": "2024-04-08T14:05:57.819Z"
+          "mtimeMs": 1713342229570.5852,
+          "date": "2024-04-17T08:24:32.839Z"
         },
         {
           "file": "css/styles.min.css.map",
-          "mtimeMs": 1712585144468.178,
-          "date": "2024-04-08T14:05:58.166Z"
+          "mtimeMs": 1713342229577.5898,
+          "date": "2024-04-17T08:24:33.330Z"
         },
         {
           "file": "fonts/FreeSetExtraCTTRegular.eot",
@@ -313,11 +313,6 @@
           "date": "2024-04-08T06:11:52.415Z"
         },
         {
-          "file": "img/images/logo-2.svg",
-          "mtimeMs": 1712556767197.4026,
-          "date": "2024-04-08T06:13:02.635Z"
-        },
-        {
           "file": "img/images/video.png",
           "mtimeMs": 1712294150000,
           "date": "2024-04-05T10:16:21.608Z"
@@ -364,23 +359,23 @@
         },
         {
           "file": "js/scripts.js",
-          "mtimeMs": 1712311224258.148,
-          "date": "2024-04-05T10:13:19.517Z"
+          "mtimeMs": 1713342133807.9883,
+          "date": "2024-04-17T08:24:39.493Z"
         },
         {
           "file": "js/scripts.min.js",
-          "mtimeMs": 1712311224717.2466,
-          "date": "2024-04-05T10:13:19.848Z"
+          "mtimeMs": 1713342134460.0325,
+          "date": "2024-04-17T08:24:40.350Z"
         },
         {
           "file": "js/scripts.min.js.map",
-          "mtimeMs": 1712311224718.2502,
-          "date": "2024-04-05T10:13:20.202Z"
+          "mtimeMs": 1713342134461.0366,
+          "date": "2024-04-17T08:24:40.785Z"
         },
         {
           "file": "index.php",
-          "mtimeMs": 1712585102526.298,
-          "date": "2024-04-08T14:05:57.066Z"
+          "mtimeMs": 1713341014577.6714,
+          "date": "2024-04-17T08:24:31.760Z"
         },
         {
           "file": "date/date.php",
@@ -388,14 +383,59 @@
           "date": "2024-04-06T13:55:10.980Z"
         },
         {
-          "file": "img/images/logo--22.svg",
-          "mtimeMs": 1712412711588.129,
-          "date": "2024-04-06T14:12:41.383Z"
+          "file": "img/images/logo-black.svg",
+          "mtimeMs": 1712829548906.5344,
+          "date": "2024-04-11T10:49:29.559Z"
         },
         {
-          "file": "img/images/logo.svg",
-          "mtimeMs": 1712555171975.407,
-          "date": "2024-04-08T06:11:53.006Z"
+          "file": "img/revs/text-1.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:33.884Z"
+        },
+        {
+          "file": "img/revs/text-10.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:34.458Z"
+        },
+        {
+          "file": "img/revs/text-2.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:35.001Z"
+        },
+        {
+          "file": "img/revs/text-3.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:35.559Z"
+        },
+        {
+          "file": "img/revs/text-4.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:36.120Z"
+        },
+        {
+          "file": "img/revs/text-5.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:36.622Z"
+        },
+        {
+          "file": "img/revs/text-6.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:37.224Z"
+        },
+        {
+          "file": "img/revs/text-7.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:37.801Z"
+        },
+        {
+          "file": "img/revs/text-8.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:38.355Z"
+        },
+        {
+          "file": "img/revs/text-9.png",
+          "mtimeMs": 1713324038000,
+          "date": "2024-04-17T08:24:38.939Z"
         }
       ]
     },
