--- a/prepros.config
+++ b/prepros.config
@@ -99,18 +99,18 @@
         },
         {
           "file": "css/styles.css",
-          "mtimeMs": 1713342227763.581,
-          "date": "2024-04-17T08:24:32.306Z"
+          "mtimeMs": 1715156337393.0483,
+          "date": "2024-05-08T08:19:15.971Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1713342229570.5852,
-          "date": "2024-04-17T08:24:32.839Z"
+          "mtimeMs": 1715156339545.3455,
+          "date": "2024-05-08T08:19:16.770Z"
         },
         {
           "file": "css/styles.min.css.map",
-          "mtimeMs": 1713342229577.5898,
-          "date": "2024-04-17T08:24:33.330Z"
+          "mtimeMs": 1715156339547.342,
+          "date": "2024-05-08T08:19:17.457Z"
         },
         {
           "file": "fonts/FreeSetExtraCTTRegular.eot",
@@ -259,8 +259,8 @@
         },
         {
           "file": "img/icons/main.svg",
-          "mtimeMs": 1712235910348.1204,
-          "date": "2024-04-05T09:21:12.284Z"
+          "mtimeMs": 1715004400615.8508,
+          "date": "2024-05-06T14:19:29.025Z"
         },
         {
           "file": "img/icons/next.svg",
@@ -374,8 +374,8 @@
         },
         {
           "file": "index.php",
-          "mtimeMs": 1713341014577.6714,
-          "date": "2024-04-17T08:24:31.760Z"
+          "mtimeMs": 1715156219540.2734,
+          "date": "2024-05-08T08:19:15.219Z"
         },
         {
           "file": "date/date.php",
@@ -436,6 +436,16 @@
           "file": "img/revs/text-9.png",
           "mtimeMs": 1713324038000,
           "date": "2024-04-17T08:24:38.939Z"
+        },
+        {
+          "file": "img/images/main-mob.png",
+          "mtimeMs": 1715144553781.6182,
+          "date": "2024-05-08T06:06:58.600Z"
+        },
+        {
+          "file": "img/images/main.png",
+          "mtimeMs": 1715005130613.605,
+          "date": "2024-05-06T14:19:29.968Z"
         }
       ]
     },
