Course page is typeseted

--- a/prepros.config
+++ b/prepros.config
@@ -99,18 +99,18 @@
         },
         {
           "file": "css/styles.css",
-          "mtimeMs": 1715156337393.0483,
-          "date": "2024-05-08T08:19:15.971Z"
+          "mtimeMs": 1715157329939.2224,
+          "date": "2024-05-08T08:35:47.577Z"
         },
         {
           "file": "css/styles.min.css",
-          "mtimeMs": 1715156339545.3455,
-          "date": "2024-05-08T08:19:16.770Z"
+          "mtimeMs": 1715157332126.2312,
+          "date": "2024-05-08T08:35:48.186Z"
         },
         {
           "file": "css/styles.min.css.map",
-          "mtimeMs": 1715156339547.342,
-          "date": "2024-05-08T08:19:17.457Z"
+          "mtimeMs": 1715157332134.2278,
+          "date": "2024-05-08T08:35:48.610Z"
         },
         {
           "file": "fonts/FreeSetExtraCTTRegular.eot",
@@ -374,13 +374,13 @@
         },
         {
           "file": "index.php",
-          "mtimeMs": 1715156219540.2734,
-          "date": "2024-05-08T08:19:15.219Z"
+          "mtimeMs": 1722864178813.5488,
+          "date": "2024-08-05T14:24:00.501Z"
         },
         {
           "file": "date/date.php",
-          "mtimeMs": 1712411691657.1873,
-          "date": "2024-04-06T13:55:10.980Z"
+          "mtimeMs": 1715337268596.8857,
+          "date": "2024-05-10T10:34:46.585Z"
         },
         {
           "file": "img/images/logo-black.svg",
@@ -439,13 +439,78 @@
         },
         {
           "file": "img/images/main-mob.png",
-          "mtimeMs": 1715144553781.6182,
-          "date": "2024-05-08T06:06:58.600Z"
+          "mtimeMs": 1715156948115.1858,
+          "date": "2024-05-08T08:29:21.861Z"
         },
         {
           "file": "img/images/main.png",
           "mtimeMs": 1715005130613.605,
           "date": "2024-05-06T14:19:29.968Z"
+        },
+        {
+          "file": "img/images/logo-blue.svg",
+          "mtimeMs": 1719213972603.4011,
+          "date": "2024-08-01T14:21:57.251Z"
+        },
+        {
+          "file": "2/index.php",
+          "mtimeMs": 1722868081814.7512,
+          "date": "2024-08-05T14:28:07.126Z"
+        },
+        {
+          "file": "course/index.html",
+          "mtimeMs": 1722866069071.4487,
+          "date": "2024-08-05T14:24:02.100Z"
+        },
+        {
+          "file": "css/course.css",
+          "mtimeMs": 1722867824116.7576,
+          "date": "2024-08-05T14:24:02.904Z"
+        },
+        {
+          "file": "css/course.min.css",
+          "mtimeMs": 1722867825535.3225,
+          "date": "2024-08-05T14:24:03.723Z"
+        },
+        {
+          "file": "css/course.min.css.map",
+          "mtimeMs": 1722867825537.3225,
+          "date": "2024-08-05T14:24:05.169Z"
+        },
+        {
+          "file": "js/course-libs.js",
+          "mtimeMs": 1722857777839.8047,
+          "date": "2024-08-05T14:24:06.569Z"
+        },
+        {
+          "file": "js/course-libs.min.js",
+          "mtimeMs": 1722857785788.8574,
+          "date": "2024-08-05T14:24:08.541Z"
+        },
+        {
+          "file": "js/course-libs.min.js.map",
+          "mtimeMs": 1722857785864.5989,
+          "date": "2024-08-05T14:24:09.950Z"
+        },
+        {
+          "file": "js/course.js",
+          "mtimeMs": 1722857796768.426,
+          "date": "2024-08-05T14:24:11.280Z"
+        },
+        {
+          "file": "js/course.min.js",
+          "mtimeMs": 1722857797259.6914,
+          "date": "2024-08-05T14:24:11.988Z"
+        },
+        {
+          "file": "js/course.min.js.map",
+          "mtimeMs": 1722857797260.6914,
+          "date": "2024-08-05T14:24:12.500Z"
+        },
+        {
+          "file": "1/index.php",
+          "mtimeMs": 1722868022697.961,
+          "date": "2024-08-05T14:27:08.600Z"
         }
       ]
     },
@@ -1248,6 +1313,39 @@
     },
     "files": [
       {
+        "file": "_app/2.pug",
+        "config": {
+          "customOutput": "2/index.php"
+        }
+      },
+      {
+        "file": "_app/_js/course-libs.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/course-libs.js",
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "_app/_js/course.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js/course.js",
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "_app/_js/libs.js",
         "config": {
           "autoCompile": true,
@@ -1275,9 +1373,21 @@
         }
       },
       {
+        "file": "_app/course.pug",
+        "config": {
+          "customOutput": "course/index.html"
+        }
+      },
+      {
         "file": "_app/index.pug",
         "config": {
           "customOutput": "index.php"
+        }
+      },
+      {
+        "file": "_app/styl/course.min.styl",
+        "config": {
+          "customOutput": "css/course.css"
         }
       },
       {
@@ -1287,11 +1397,35 @@
         }
       },
       {
+        "file": "css/course.css",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "customOutput": "css/course.min.css"
+        }
+      },
+      {
         "file": "css/styles.css",
         "config": {
           "autoCompile": true,
           "sourceMap": true,
           "customOutput": "css/styles.min.css"
+        }
+      },
+      {
+        "file": "js/course-libs.js",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "customOutput": "js/course-libs.min.js"
+        }
+      },
+      {
+        "file": "js/course.js",
+        "config": {
+          "autoCompile": true,
+          "sourceMap": true,
+          "customOutput": "js/course.min.js"
         }
       },
       {
